<resources>
    <string name="app_name">MV_TED</string>
    <string name="main_frame_item_menu">Main Frame</string>
    <string name="favorite_movies_item_menu">Favorite Movies</string>
    <string name="settings_item_menu">Settings</string>
    <string name="search_movie_item_menu">Search Movie</string>
    <string name="nav_header_movie_app">Movie App</string>
    <string name="nav_header_more_information_text">More information...</string>
    <string name="closer_drawer_conent_text">Close Drawer</string>
    <string name="open_string_text_drawer">open</string>
    <string name="now_playing_text_main_fragment">Top Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textOnOptionItemSelectedMainFrame">Main Frame</string>
    <string name="NavigationFDawerText">Drawer</string>
    <string name="coming_soon">Coming soon</string>
    <string name="snack_bar_error_msg">Error</string>
    <string name="snack_bar_success_msg">success</string>
    <string name="hide_adult_movies_menu_title">Hide Adult movies</string>
    <string name="hint_comment">Enter your comment</string>
    <string name="toast_menu_favorite_text">Favorite_Item</string>
    <string name="to_contacts_menu_title">To Contacts</string>
    <string name="go_to_contacts">Go to contacts</string>
    <string name="toast_menu_contacts_title">Contacts Fragment</string>
    <string name="title_alert_explonation_contacts_rermission">Access to contacts</string>
    <string name="content_alert_explonation_contact_permission">Why we using this</string>
    <string name="negative_button_alert_contact_permission">Close</string>
    <string name="to_google_map_menu_title">To Google Map</string>
    <string name="toast_title_google_map">Google Map</string>
    <string name="hint_enter_search_address">Enter Address</string>
    <string name="btn_search_address">Search</string>
    <string name="Start_position">Start position</string>
    <string name="go_to_map_menu">Go to Map</string>
    <string name="like_description_img">Like</string>
    <string name="Title_alert_geofence">Geofence</string>
    <string name="mesg_alert_geofence">The Cinema near You</string>
    <string name="log_msg_geofence_add">geofence_added</string>
    <string name="overview_title_text">Overview</string>
    <string name="users_score_title">Users Score</string>
    <string name="Action_Error_Text_SnackBar">reload</string>
</resources>